styles/Blog.module.css
.blog {
  @apply font-inter dark:!text-gray-400 w-full;
}

.blog img {
  @apply !mx-auto rounded-lg;
}
.blog a,
.blog > ul > li > a {
  @apply text-blue-500 underline;
}

.blog h1,
.blog h2,
.blog h3,
.blog h4,
.blog h5,
.blog h6,
.blog strong {
  @apply text-blue-700  font-semibold my-2;
}

.blog blockquote {
  @apply border-l-4 border-gray-500 pl-3;
}
.blog blockquote img {
  @apply !mx-0 !my-1;
}

.blog blockquote p {
  @apply text-gray-500;
}

.blog > div > table > thead > tr > th {
  @apply border border-black text-teal-500 text-center !p-2 !font-bold;
}
.blog > div > table > thead {
  @apply !text-gray-800;
}
.blog > div > table tbody > tr > td {
  @apply border border-black !p-2 table-cell;
}

.blog > figure {
  @apply rounded-md mx-auto overflow-hidden;
}

.blog > figure img {
  @apply mx-auto my-0 rounded-lg;
}
.blog > figure figcaption {
  @apply text-center text-sm font-medium italic text-gray-500 max-w-xl  mx-auto;
}

.blog code {
  @apply bg-gray-600 text-white;
}

.blog h1 code,
.blog h2 code,
.blog h3 code,
.blog h4 code,
.blog h5 code,
.blog h6 code,
.blog ul li * {
  @apply bg-transparent font-semibold my-2 text-blue-500;
}

.blog div[data-rehype-pretty-code-title] {
  @apply bg-[#1f2937] rounded-tl-md rounded-tr-md border-b text-gray-500 dark:text-white w-full;
}

/* Main code */
.blog > div[data-rehype-pretty-code-fragment] > pre,
.blog > pre {
  @apply my-0 border border-gray-50/50 rounded-bl-md rounded-br-md mb-4 sm:text-sm w-full !p-0;
}

.blog > div[data-rehype-pretty-code-fragment] code {
  @apply grid;
}

